--- a/Ejercicio1/app/src/main/res/layout/activity_main2.xml
+++ b/Ejercicio1/app/src/main/res/layout/activity_main2.xml
@@ -13,6 +13,7 @@
         android:layout_height="48dp"
         android:backgroundTint="@android:color/holo_orange_light"
         android:fontFamily="@font/manisbanget"
+        android:onClick="clickButtonRegresar"
         android:text="@string/txtRegresa"
         android:textAllCaps="false"
         android:textColor="@android:color/holo_red_dark"
@@ -56,23 +57,24 @@
 
     <TextView
         android:id="@+id/tvFecha"
-        android:layout_width="311dp"
-        android:layout_height="40dp"
+        android:layout_width="304dp"
+        android:layout_height="69dp"
         android:fontFamily="@font/cottonbutter"
         android:textAlignment="center"
         android:textColor="@android:color/holo_orange_light"
-        android:textSize="34sp"
+        android:textSize="27sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.357"
-        tools:text="Naciste el 01/02/1998" />
+        app:layout_constraintVertical_bias="0.432"
+        tools:text="Naciste el 01/02/1998, por lo tanto tu animal en el horóscopo chino es:" />
 
     <TextView
         android:id="@+id/tvEdad"
-        android:layout_width="310dp"
-        android:layout_height="63dp"
+        android:layout_width="313dp"
+        android:layout_height="37dp"
         android:fontFamily="@font/cottonbutter"
         android:textAlignment="center"
         android:textColor="@android:color/holo_orange_light"
@@ -82,6 +84,6 @@
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.429"
-        tools:text="Tu edad es 23, por lo tanto tu animal en el horoscopo chino es:" />
+        app:layout_constraintVertical_bias="0.359"
+        tools:text="Tu edad es:" />
 </androidx.constraintlayout.widget.ConstraintLayout>
