--- a/Ejercicio1/app/src/main/res/layout/activity_main.xml
+++ b/Ejercicio1/app/src/main/res/layout/activity_main.xml
@@ -24,11 +24,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.328" />
 
-    <EditText
+    <TextView
         android:id="@+id/etFecha"
-        android:layout_width="363dp"
-        android:layout_height="59dp"
+        android:layout_width="304dp"
+        android:layout_height="48dp"
+        android:clickable="false"
         android:ems="10"
+        android:focusable="false"
         android:fontFamily="@font/cottonbutter"
         android:hint="@string/hintFecha"
         android:inputType="date"
@@ -37,10 +39,10 @@
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.413"
+        app:layout_constraintHorizontal_bias="0.149"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.654" />
+        app:layout_constraintVertical_bias="0.653" />
 
     <EditText
         android:id="@+id/etCorreo"
@@ -75,10 +77,9 @@
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.525"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.477" />
+        app:layout_constraintVertical_bias="0.465" />
 
     <EditText
         android:id="@+id/etNumCuenta"
@@ -116,5 +117,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.852" />
+
+    <Button
+        android:id="@+id/butCalendar"
+        android:layout_width="70dp"
+        android:layout_height="48dp"
+        android:backgroundTint="@android:color/holo_orange_dark"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.953"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.644"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
